word overflow fix

--- a/src/CompStyles/LogoutModal.css
+++ b/src/CompStyles/LogoutModal.css
@@ -66,6 +66,13 @@
     font-size: 1.5rem;
   }
   
+  .user-name {
+    word-break: break-all;
+    max-width: 100%;
+  }
+  
+  
+  
   .logout-button:hover {
     background-color: #151616;
   }
