--- a/src/CompStyles/VerNavbar.css
+++ b/src/CompStyles/VerNavbar.css
@@ -136,6 +136,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 40px;
 }
 
 
@@ -143,6 +144,7 @@
   border-radius: 50%; 
   width: 100px; 
   height: 100px; 
+  box-shadow: 0 0 20px 5px rgba(255, 255, 255, 0.8);
 }
 
 
